Popular component and Item component completed

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -23,7 +23,7 @@
     list-style: none;
     gap: 50px;
     font-size: 20px;
-    font-weight: medium;
+    font-weight: bold;
 }
 
 .navbar_links li {
