--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -5,7 +5,7 @@
 }
 
 .hero_left {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 50%;
     height: 90%;
     flex: 1;
@@ -48,7 +48,7 @@
 }
 
 .hero_right {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     width: 50%;
     height: 90%;
     display: flex;
@@ -57,6 +57,5 @@
 }
 
 .hero_image {
-
     width: 400px;
 }
