--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     padding: 16px;
+    height: 60px;
     box-shadow: 0 1px 3px -2px black;
 }
 
