--- a/src/utils/Button/Button.css
+++ b/src/utils/Button/Button.css
@@ -2,8 +2,8 @@
     width: 160px;
     height: 60px;
     outline: none;
-    border: none;
-    border-radius: 100px;
+    border: 1px solid black;
+    border-radius: 20px;
     font-weight: bold;
     font-size: 20px;
     cursor: pointer;
